11.1.4 (18-10-2023)
- Refactor: Rename method parameter for better code readability [#qubIT-Fenix-4459]
- Improvement: Add to AcademicTreasuryEvent a method to merge with a target person, which basically set the person and allow merge data of treasury event targets. For now support only for ReservationTaxEventTarget [#qubIT-Fenix-4459]

11.1.3 (28-09-2023)
- Refactor: Fix the academic treasury event degree association and use the DML AcademicTreasuryEvent and Degree relation (#qubIT-Fenix-4374)
- Bug Fix: Fix tuition payment plan tuition deletion for many degree curricular plans. The reorder of tuition payment plan orders was fixed (#qubIT-Fenix-4401)
- Bug Fix: Fix tuition payment plan creation, when the tuition payment plan orders are not strictly sequential (<previous order> + 1) (#qubIT-Fenix-4402)
- Bug Fix: Add specific method factory to create TuitionPaymentPlanBean, when copying a tuition payment plan, to fix the copy of tuition calculators (#qubIT-Fenix-4403)

11.1.2 (21-09-2023)
- Improvement: In exemptions request by file, read the product of treasury event by code, besides reading by description (#UL-FC-4400)
- Improvement: In exemptions request by file, if the debit entry name is not specified, consider only debit entries in treasury event which are not interests (#UL-FC-4400)

11.1.1 (19-09-2023)
- Refactor: Remove relation between TreasuryEvent and TreasuryExemption. the treasuryEvent can be infered in treasuryExemption by accessing the associated debitEntry
- Refactor: Added method to know what is the associated tuition payment plan of calculator, since it might be connected to a aggregator calculator
- Bug Fix: Add missing error label
- Bug Fix: Override LegacyAcademicTreasuryEvent::getDegreeCode and get the associated exemption to discount in tuitions

11.1.0 (14-09-2023)
- Improvement: Remove synchronized keywords to avoid contention. Replace StringBuilder with StringBuffer to avoid synchronized facility